--- a/Test_2_9_2022/Test_2_9_2022/Test_2_9_2022.vcxproj
+++ b/Test_2_9_2022/Test_2_9_2022/Test_2_9_2022.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="test_01.c" />
+    <ClCompile Include="test_02.c" />
+    <ClCompile Include="test_03.c" />
+    <ClCompile Include="test_04.c" />
+    <ClCompile Include="test_05.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
