--- a/Test_2_9_2022/Test_2_9_2022/Test_2_9_2022.vcxproj.filters
+++ b/Test_2_9_2022/Test_2_9_2022/Test_2_9_2022.vcxproj.filters
@@ -18,5 +18,17 @@
     <ClCompile Include="test_01.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test_02.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="test_03.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="test_04.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="test_05.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
